# SwiftTranslater

./: CMakeLists.txt  GoogleTranslate.py  README.md  cmake_uninstall.cmake.in  swifttranslater.cpp
gtest/: CMakeLists.txt  TypePaser.h  test_main.cpp  test_main.h
include/: debug.h  swiftpaser.h
src/: debug.cpp  swiftpaser.cpp
